Change to use SFTP action instead of FTP

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,13 +13,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Deploy WordPress Theme
-        uses: samkirkland/ftp-deploy-action@4.4.0
-
+      - name: Deploy with SCP
+        uses: appleboy/scp-action@master
         with:
-          server: ${{ secrets.SFTP_SERVER }}
-          username: ${{ secrets.SFTP_USERNAME }}
-          password: ${{ secrets.SFTP_PASSWORD }}
-          local-dir: wp-content/themes/astra-child/
-          server-dir: wp-content/themes/astra-child/
-          method: ftps
+          host: ${{ secrets.SFTP_HOST }}
+          username: ${{ secrets.SFTP_USER }}
+          key: ${{ secrets.SFTP_KEY }}
+          port: ${{ secrets.SFTP_PORT }}
+          source: wp-content/themes/astra-child/
+          target: /var/www/html/wp-content/themes/astra-child/
