--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,8 @@
 name: Deploy WordPress Theme
 
+env:
+  DEBUG: true
+
 on:
   push:
     branches:
@@ -16,9 +19,9 @@ jobs:
       - name: Deploy with SCP
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.SFTP_HOST }}
-          username: ${{ secrets.SFTP_USER }}
+          host: ${{ secrets.SFTP_SERVER }}
+          username: ${{ secrets.SFTP_USERNAMME }}
           key: ${{ secrets.SFTP_KEY }}
           port: ${{ secrets.SFTP_PORT }}
           source: wp-content/themes/astra-child/
-          target: /var/www/html/wp-content/themes/astra-child/
+          target: /var/www/aavsb/wp-content/themes/astra-child/
