--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SFTP_SERVER }}
-          username: ${{ secrets.SFTP_USERNAMME }}
+          username: ${{ secrets.SFTP_USERNAME }}
           key: ${{ secrets.SFTP_KEY }}
           port: ${{ secrets.SFTP_PORT }}
           source: wp-content/themes/astra-child/
